<resources>
    <string name="app_name">About Me</string>
    <string name="HelloLabel">Khoo Bao Xuan</string>
    <string name="IntroLabel">Introvert. Basketball player. Casual gamer. Geek. Emo boi.</string>
    <string name="contentDescription">Profile picture of user.</string>
    <string name="email_address">baoxuan9616@gmail.com</string>
    <string name="phone_num">+60 16-9157190</string>
</resources>
