<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:clipToPadding="false"
    tools:context=".MainActivity">


    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="600dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="230dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:src="@drawable/blue_sea_darken" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="-40dp">

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/round_circle_background" />

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/contentDescription"

                    android:src="@drawable/bx_circle" />
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/HelloLabel"
            android:textColor="#333333"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="82dp"
            android:text="@string/IntroLabel"
            android:textAlignment="center"
            android:textColor="#999999"
            android:textSize="16dp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="35dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_email_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/email_address"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="35dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_phone_icon" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/phone_num"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addMeButton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="30dp"
            android:background="@drawable/add_to_contact_button"
            android:fontFamily="sans-serif-condensed"
            android:text="Add To Contact"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>